Switched over to OberservableCollections

--- a/Process Shutdown Timer/Task Timer/Process Shutdown Timer.csproj
+++ b/Process Shutdown Timer/Task Timer/Process Shutdown Timer.csproj
@@ -89,7 +89,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ProcessContainer.cs" />
-    <Compile Include="ScheduleManager.cs" />
+    <Compile Include="ProcessManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
